# aoc-template

./: .gitignore  README.md
java/: build.gradle.kts  settings.gradle.kts
java/data/: Day01.txt
java/src/: Day01.kt  Utils.kt
python/: Makefile  pyproject.toml
python/aoc/: day01.py  utils.py
