[tool.poetry]
name = "advent-of-code"
version = "0.0.0"
description = "Advent of Code"
authors = ["Sage Choi <sage.choi@gmail.com>"]
packages = [{include = "aoc"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
